# aobscan

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  build_and_test.yml  rust.yml
examples/: batch_scan.rs  benchmark.rs  file_scan.rs  include_bytes.rs  mt_ida_scan.rs  on_progress.rs  text_section.rs
src/: builder.rs  lib.rs  object_scan.rs  pattern.rs
tests/: ida_scan_single_threaded.rs  pattern_building.rs  scan_multi_threaded.rs  scan_no_matches.rs
tests/common/: mod.rs
