[package]
name = "aobscan"
version = "0.1.7"
authors = ["sonodima"]
edition = "2021"

description = "AOBscan is a library for multi-threaded AOB memory scanning"
readme = "README.md"
homepage = "https://github.com/sonodima/aobscan"
repository = "https://github.com/sonodima/aobscan"
license = "MIT"

keywords = ["memory", "aob", "signature", "pattern", "scan"]
categories = ["algorithms"]


[dependencies]
num_cpus = "1.13"
object = "0.29"

[dev-dependencies]
rand = "0.8"
